# BigBroX

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  UCIHandler.cpp  UCIHandler.hpp  attack.cpp  attack.hpp  bench.txt  chess_engine  cmake_install.cmake  engine.cpp  engine.hpp  game.cpp  game.hpp  games.pgn  magicBitboards.cpp  magicBitboards.hpp  main.cpp  position.cpp  position.hpp  run_bk.py  transposition.cpp  transposition.hpp  types.hpp  utils.cpp  utils.hpp
Versions/: BigBroX_V0  BigBroX_V1  BigBroX_V3  BigBroX_V4  BigBroX_V6  BigBroX_V9
include/: UCIHandler.hpp  attack.hpp  engine.hpp  game.hpp  position.hpp  transposition.hpp  types.hpp  utils.hpp
src/: UCIHandler.cpp  attack.cpp  engine.cpp  game.cpp  magicBitboards.cpp  main.cpp  position.cpp  transposition.cpp  utils.cpp
tests/: bench.txt  game_eval.py  perf_record_test  perf_stat_test
